--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>AI Studio - Create & Edit Amazing Images</title>
 </head>
+<script src="https://cdn.paddle.com/paddle/v2/paddle.js"></script>
+
 
 <body>
   <div id="root"></div>
