chore: add google site verification meta tag

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,6 +15,7 @@
     content="AI image generator, DALL-E, AI art, image generator, AI image creator, free AI art, DALL-E 3, AI photo generator, text to image" />
   <meta name="author" content="AI Studio" />
   <meta name="robots" content="index, follow" />
+  <meta name="google-site-verification" content="w0Mw7MhV7v6UHr_QJF4oicbs-bMBWtdiumjrbb57J3s" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
