brand: rename to AI Image Generation and update free credit info to 2

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,26 +7,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Primary Meta Tags -->
-  <title>AI Studio - Free AI Image Generator | DALL-E Powered</title>
-  <meta name="title" content="AI Studio - Free AI Image Generator | DALL-E Powered" />
+  <title>AI Image Generation - Free AI Image Generator | DALL-E Powered</title>
+  <meta name="title" content="AI Image Generation - Free AI Image Generator | DALL-E Powered" />
   <meta name="description"
     content="Create stunning AI-generated images with DALL-E 3. Free AI image generator, edit images, and create variations. Fast, high-quality results." />
   <meta name="keywords"
     content="AI image generator, DALL-E, AI art, image generator, AI image creator, free AI art, DALL-E 3, AI photo generator, text to image" />
-  <meta name="author" content="AI Studio" />
+  <meta name="author" content="AI Image Generation" />
   <meta name="robots" content="index, follow" />
   <meta name="google-site-verification" content="w0Mw7MhV7v6UHr_QJF4oicbs-bMBWtdiumjrbb57J3s" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="AI Studio - Free AI Image Generator" />
+  <meta property="og:title" content="AI Image Generation - Free AI Image Generator" />
   <meta property="og:description"
     content="Create stunning AI-generated images with DALL-E 3. Free, fast, and high-quality." />
   <meta property="og:image" content="/favicon.svg" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:title" content="AI Studio - Free AI Image Generator" />
+  <meta property="twitter:title" content="AI Image Generation - Free AI Image Generator" />
   <meta property="twitter:description"
     content="Create stunning AI-generated images with DALL-E 3. Free, fast, and high-quality." />
   <meta property="twitter:image" content="/favicon.svg" />
